--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,10 @@ typer-demo = "typer_demo:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
+    "ruff>=0.12.0",
+]
